updated button layout

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="calculator-grid">
+  <section class="calculator-grid">
     <div class="output-screen">
-      <div class="answer">7484 +</div>
-      <div class="current-input" >8474</div>
-
+      <div class="answer">123</div>
+      <div class="current-input">456</div>
     </div>
+
+<!-- Output Screen-->
+
+<!-- Buttons -->
+
     <button class="two-space">AC</button>
     <button></button>
     <button>÷</button>
@@ -33,8 +37,7 @@
     <button>0</button>
     <button class="two-space">=</button>
 
-  </div>
-  
+  </section>
 
   <script src="calculator.js"></script>
 </body>
