--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <button data-operation>-</button>
     <button data-number>.</button>
     <button data-number>0</button>
-    <button class="two-space">=</button>
+    <button data-equals class="two-space">=</button>
 
   </section>
 
