fixed dispaly issue and finally got numbers to show on the output

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <section class="calculator-grid">
     <div class="output-screen">
-      <div data-previous-operand class="answer">123</div>
-      <div data-current-operand class="current-input">456</div>
+      <div data-previous-operand class="answer"></div>
+      <div data-current-operand class="current-input"></div>
     </div>
 
 <!-- Output Screen-->
@@ -39,6 +39,6 @@
 
   </section>
 
-  <script src="calculator.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
