--- a/index.html
+++ b/index.html
@@ -8,37 +8,41 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div >
   <section class="calculator-grid">
     <div class="output-screen">
-      <div data-previous-operand class="answer"></div>
-      <div data-current-operand class="current-input"></div>
+      <div class="current-input"> 
+        <p class="screen-output"></p>
+      </div>
     </div>
 
 <!-- Output Screen-->
 
 <!-- Buttons -->
-
-    <button data-all-clear class="two-space">AC</button>
-    <button data-none></button>
-    <button data-operation>÷</button>
-    <button data-number>1</button>
-    <button data-number>2</button>
-    <button data-number> 3</button>
-    <button data-operation>*</button>
-    <button data-number>4</button>
-    <button data-number>5</button>
-    <button data-number>6</button>
-    <button data-operation>+</button>
-    <button data-number>7</button>
-    <button data-number>8</button>
-    <button data-number>9</button>
-    <button data-operation>-</button>
-    <button data-number>.</button>
-    <button data-number>0</button>
-    <button data-equals class="two-space">=</button>
+  
+    <button class="clear-button">AC</button>
+    <button></button>
+    <button class="oper-button">÷</button>
+    <button id="one">1</button>
+    <button class="num-button">2</button>
+    <button class="num-button">3</button>
+    <button class="num-button">*</button>
+    <button class="num-button">4</button>
+    <button class="num-button">5</button>
+    <button class="num-button">6</button>
+    <button class="oper-button">+</button>
+    <button class="num-button">7</button>
+    <button class="num-button">8</button>
+    <button class="num-button">9</button>
+    <button class="oper-button">-</button>
+    <button class="num-button">.</button>
+    <button class="num-button">0</button>
+    <button class="equal-button">=</button>
+  
 
   </section>
 
-  <script src="script.js"></script>
+  <script src="script2.js"></script>
+</div>
 </body>
 </html>
