added button fuctionallity

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <button class="clear-button">AC</button>
     <button></button>
     <button class="oper-button">÷</button>
-    <button id="one">1</button>
+    <button class="num-button">1</button>
     <button class="num-button">2</button>
     <button class="num-button">3</button>
     <button class="num-button">*</button>
