--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <button class="num-button">1</button>
     <button class="num-button">2</button>
     <button class="num-button">3</button>
-    <button class="num-button">*</button>
+    <button class="oper-button">*</button>
     <button class="num-button">4</button>
     <button class="num-button">5</button>
     <button class="num-button">6</button>
